[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "friday-sandbox"
version = "0.1.0"
description = "friday night coding"
authors = [
    { name = "Cruz De La Cruz", email = "delacruzmanc@gmail.com" }
]
dependencies = [
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
sandbox-cli = "friday_package.cli:main"